--- a/client/src/style.css
+++ b/client/src/style.css
@@ -164,7 +164,7 @@ border-bottom:1px solid var(--dark-purple)
     flex:1;
 }
 
-.read-more-btn, .comment-btn{
+.read-more-btn, .comment-btn,.signup-btn,.login-btn{
     margin-top:20px;
     width: fit-content;
     text-decoration: none;
@@ -280,11 +280,26 @@ border-bottom:1px solid var(--dark-purple)
 
 }
 /*-----SIGNUP Page -----*/
+.signUp,.login{
+    display:flex;
+    align-items: center;
+    height:calc(100% - 60px);
+}
+.signUp img, .login img{
+    height: 100%;
+    padding:30px;
+}
 .form{
     display:flex;
     flex-direction: column;
-    width:300px;
-    margin: 0 auto;
+}
+.form label{
+    font-size:1.5vw;
+    text-transform: uppercase;
+}
+.form input{
+    font-size: 1.2vw;
+    margin-bottom: 10px;;
 }
 
 /*Foto di <a href="https://unsplash.com/it/@hannynaibaho?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hanny Naibaho</a> su <a href="https://unsplash.com/it/foto/foto-di-vetro-pieno-PN61o73PR1M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>*/
