--- a/CMS/src/index.css
+++ b/CMS/src/index.css
@@ -1,198 +1,289 @@
-:root{
-  --light-red:#db6367;
-  --dark-red:#B8494C;
-  --light-green:#abda7f;
-  --dark-green:#82b652;
-  --dark-yellow:#E9C453;
-  --light-yellow:#ecc95e;
-  --light-grey:#D7E0E0;
-  --dark-grey:#aaafaf;
-  --dark-blue:#062A40;
-  --light-blue:#083c5c;
+:root {
+  --light-red: #db6367;
+  --dark-red: #B8494C;
+  --light-green: #abda7f;
+  --dark-green: #82b652;
+  --dark-yellow: #E9C453;
+  --light-yellow: #ecc95e;
+  --light-grey: #D7E0E0;
+  --dark-grey: #aaafaf;
+  --dark-blue: #062A40;
+  --light-blue: #083c5c;
 
 }
 
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
   font-family: 'Exo 2', 'sans serif';
 }
 
-body{
-  height: 100vh;
+
+
+#root {
+  display: flex;
 }
 
-#root{
-  height: 100%;
-  display:flex;
-}
 /*STYLE SIDEBAR */
-.sidebar{
-  height:100%;
-  width:30%;
-  padding:20px;
+.sidebar {
+  height: 100%;
+  width: 30%;
+  padding: 20px;
 }
-.sidebar ul{
-  display:flex;
+
+.sidebar ul {
+  display: flex;
   flex-direction: column;
-  gap:10px;
+  gap: 10px;
   list-style-type: none;
 }
-.sidebar li{
+
+.sidebar li {
   background-color: var(--light-grey);
-  padding:5px;
-  border-radius: 5px;;
+  padding: 5px;
+  border-radius: 5px;
+  ;
 }
-.sidebar li:hover{
-  cursor:pointer;
+
+.sidebar li:hover {
+  cursor: pointer;
   background-color: var(--dark-grey);
 }
-.sidebar a{
+
+.sidebar a {
   text-decoration: none;
-  color:black;
-  display:block;
+  color: black;
+  display: block;
 }
-.sidebar .logout-btn{
+
+.sidebar .logout-btn {
   background-color: var(--light-red);
 }
-.logout-btn a{
-  color:white;
+
+.logout-btn a {
+  color: white;
 }
-.sidebar .logout-btn:hover{
+
+.sidebar .logout-btn:hover {
   background-color: var(--dark-red);
 }
+
 /*STYLE CONTENT*/
-.content{
-  flex:1;
-  padding:20px
+.content {
+  width: 70%;
+  padding: 20px
 }
-.content h2{
-  margin-bottom:10px;
+
+.content h2 {
+  margin-bottom: 10px;
   background-color: var(--dark-blue);
-  color:white;
-  padding:5px;
-  border-radius: 5px;;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+  ;
 }
-.content h2::first-letter{
+
+.content h2::first-letter {
   text-transform: uppercase;
+}
+
+/*STYLE RULES*/
+.rules-area h3{
+  margin-bottom: 10px;;
+}
+
+.rules-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style-type: none;
+}
+
+.rules-list li {
+  border-bottom: 1px solid black;
+  padding: 10px;
+  background-color: var(--light-grey);
+  border-radius: 10px;
+  ;
 }
 
 
 /*STYLE FORM*/
 
-.form{
-  display:flex;
+.form {
+  display: flex;
   flex-direction: column;
-  gap:10px;
-  border-radius:5px;
-  padding:10px;
+  gap: 10px;
+  border-radius: 5px;
+  padding: 10px;
   background-color: var(--light-grey);
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
-.form label{
-  display:flex;
+
+.form label {
+  display: flex;
   flex-direction: column;
   font-weight: bold;
-  gap:5px;
+  gap: 5px;
 }
-.form textarea{
+
+.form textarea {
   height: 100px;
   resize: none;
 }
-.form input, .form textarea{
-  padding:5px;
+
+.form input,
+.form textarea {
+  padding: 5px;
 }
 
 /*STYLE LOGIN*/
-.login-area{
-  width:100%;
-  display:flex;
+.login-area {
+  width: 100%;
+  display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center;
 }
 
-.post-list{
+/*STYLE COMMENTS*/
+.comment-list {
+  padding: 10px;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: var(--light-grey);
+  border-radius: 5px;
+
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: white;
+  padding: 5px;
+  border-radius: 5px;
+
+}
+
+.comment-info {
+  display: flex;
+  height: 50px;
+  overflow: auto;
+}
+
+.comment-info p:nth-child(1) {
+  border-right: 1px solid black;
+  padding-right: 10px;
+}
+
+.comment-info p:nth-child(2) {
+  word-break: break-all;
+  padding-left: 10px;
+}
+
+/*STYLE POST LIST*/
+.post-list {
   list-style-type: none;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.listed-post{
-  color:black;
+
+.listed-post {
+  color: black;
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap:10px;
+  gap: 10px;
   border-radius: 10px;
   background-color: var(--light-grey);
 }
-.listed-post:hover{
+
+.listed-post:hover {
   cursor: pointer;
   background-color: var(--dark-grey);
 }
-.listed-post-info{
+
+.listed-post-info {
   display: flex;
   flex-direction: column;
-  gap:10px;
+  gap: 10px;
 }
-.listed-post-info img{
+
+.listed-post-info img {
   height: 20px;
 }
-.listed-post-author,.listed-post-comments,.listed-post-date{
-  display:flex;
-  gap:5px;
+
+.listed-post-author,
+.listed-post-comments,
+.listed-post-date {
+  display: flex;
+  gap: 5px;
 }
-.red-btn{
-  color:white;
+
+.red-btn {
+  color: white;
   background-color: var(--light-red);
-  border:none;
-  padding:5px;
-  border-radius: 5px;;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  ;
 }
-.red-btn:hover{
+
+.red-btn:hover {
   background-color: var(--dark-red);
-  cursor:pointer;
+  cursor: pointer;
 }
 
-.green-btn{
-  color:black;
+.green-btn {
+  color: black;
   background-color: var(--light-green);
-  border:none;
-  padding:5px;
-  border-radius: 5px;;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  ;
 }
-.green-btn:hover{
+
+.green-btn:hover {
   background-color: var(--dark-green);
-  cursor:pointer;
+  cursor: pointer;
 }
-.yellow-btn{
+
+.yellow-btn {
   background-color: var(--light-yellow);
-  border:none;
-  padding:5px;
-  border-radius: 5px;;
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  ;
 
 }
-.yellow-btn:hover{
+
+.yellow-btn:hover {
   background-color: var(--dark-yellow);
-  cursor:pointer;
+  cursor: pointer;
 }
-.error-msg{
-  color:red;
+
+.error-msg {
+  color: red;
 }
 
 
 /*-----LOADING-----*/
-.loading{
-  display:flex;
+.loading {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.loading img{
+
+.loading img {
   height: 100px;
 }
-.loading p{
+
+.loading p {
   color: var(--dark-purple);
   font-weight: bold;
 }
