--- a/client/src/style.css
+++ b/client/src/style.css
@@ -32,7 +32,11 @@ header {
     justify-content: space-between;
     background-color: #211949;
     color: white;
-    padding: 10px 50px;;
+    padding: 10px 50px;
+}
+
+.mobile-menu {
+    display: none;
 }
 
 header nav,
@@ -41,7 +45,8 @@ header nav,
     gap: 20px;
     height: 50px;
 }
-header nav{
+
+header nav {
     align-items: center;
 }
 
@@ -50,16 +55,18 @@ header a {
     color: black;
     color: white;
 }
-.auth-btn{
-    display:flex;
+
+.auth-btn {
+    display: flex;
     align-items: center;
-    gap:3px;
+    gap: 3px;
 
 }
-.authIcon{
-   height: 50%;
-   width: auto;
-   
+
+.authIcon {
+    height: 50%;
+    width: auto;
+
 }
 
 
@@ -197,17 +204,20 @@ header a {
     border-radius: 5px;
     background-color: var(--dark-purple);
 }
+
 /*-----LOADING-----*/
-.loading{
-    display:flex;
+.loading {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.loading img{
+
+.loading img {
     height: 100px;
 }
-.loading p{
+
+.loading p {
     color: var(--dark-purple);
     font-weight: bold;
 }
@@ -370,9 +380,216 @@ header a {
 .error-msg {
     color: red;
 }
-.success-msg{
-    color:green;
+
+.success-msg {
+    color: green;
 }
+
+/* ----- MEDIA QUERIES -----*/
+
+/*SMALL DISPLAY*/
+@media screen and (max-width:450px) {
+    header {
+        padding: 10px;
+        position: relative;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+
+    .mobile-nav {
+        position: absolute;
+        left: 0;
+        height: 100px;
+        flex-direction: column;
+        justify-content: space-evenly;
+        gap: 10px;
+        padding: 20px;
+        transform: translateY(10px);
+        background-color: var(--dark-purple);
+    }
+
+    .mobile-nav img {
+        height: 20px;
+        ;
+    }
+
+    .auth-area {
+        display: none;
+    }
+
+    .menuIcon {
+        height: 35px;
+        ;
+    }
+
+    .hero {
+        padding-left: 10px;
+    }
+
+    .hero h1 {
+        font-size: 10vw;
+    }
+
+    .hero p {
+        font-size: 7vw;
+    }
+
+    .hero-btns a {
+        font-size: 7vw
+    }
+
+    .blog-section {
+        padding: 10px;
+        ;
+    }
+
+    .blog-aside {
+        padding: 0;
+        width: 30%;
+        position: sticky;
+        top: 0;
+    }
+
+    .featured-posts h2 {
+        font-size: 3vw;
+        margin-bottom: 10px;
+    }
+
+    .featured-posts a {
+        font-size: 3vw;
+    }
+
+    .featured-posts-list {
+        gap: 10px;
+    }
+
+    .post-list {
+        width: 70%;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .post-preview {
+        max-width: 100%;
+        padding: 0;
+    }
+
+    .post {
+        padding: 20px;
+
+    }
+
+    .post-description {
+        font-size: 3vw;
+    }
+
+    .post-body {
+        font-size: 4vw;
+    }
+
+    .login img,
+    .signUp img {
+        padding: 10px;
+        width: 50%;
+        object-fit: cover;
+    }
+
+    .form label {
+        font-size: 4vw;
+    }
+
+    .form input {
+        font-size: 3vw;
+    }
+}
+
+/*MEDIUM DISPLAY*/
+@media screen and (max-width:840px) {
+    .hero h1 {
+        font-size: 7vw;
+    }
+
+    .hero p {
+        font-size: 4vw;
+    }
+
+    .hero-btns a {
+        font-size: 3vw
+    }
+
+    .blog-section {
+        padding: 20px;
+        ;
+    }
+
+    .blog-aside {
+        padding: 0;
+        width: 30%;
+        position: sticky;
+        top: 0;
+    }
+
+    .featured-posts h2 {
+        font-size: 2.5vw;
+        margin-bottom: 10px;
+    }
+
+    .featured-posts a {
+        font-size: 2.5vw;
+    }
+
+    .featured-posts-list {
+        gap: 10px;
+    }
+
+    .post-list {
+        width: 70%;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .post-preview {
+        max-width: 100%;
+        padding: 0;
+    }
+
+    .post {
+        padding: 20px;
+
+    }
+
+    .post-description {
+        font-size: 2.5vw;
+    }
+
+    .post-body {
+        font-size: 3vw;
+    }
+
+    .login img,
+    .signUp img {
+        padding: 10px;
+        width: 50%;
+        object-fit: cover;
+    }
+
+    .form label {
+        font-size: 3vw;
+    }
+
+    .form input {
+        font-size: 2.5vw;
+    }
+
+
+}
+
+
+
 
 /*Foto di <a href="https://unsplash.com/it/@hannynaibaho?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hanny Naibaho</a> su <a href="https://unsplash.com/it/foto/foto-di-vetro-pieno-PN61o73PR1M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>*/
 /*Foto di <a href="https://unsplash.com/it/@donramxn?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Ramón Salinero</a> su <a href="https://unsplash.com/it/foto/mano-umana-che-tiene-la-sfera-del-plasma-vEE00Hx5d0Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>*/
