--- a/CMS/src/index.css
+++ b/CMS/src/index.css
@@ -26,6 +26,9 @@
 }
 
 /*STYLE SIDEBAR */
+.mobile-menu{
+  display:none;
+}
 .sidebar {
   height: 100%;
   width: 30%;
@@ -286,4 +289,58 @@
 .loading p {
   color: var(--dark-purple);
   font-weight: bold;
+}
+
+
+/*MEDIA QUERIES*/
+@media screen and (max-width:450px) {
+  #root{
+    flex-direction: column;
+  }
+  .sidebar{
+    display: none;
+  }
+  .mobile-menu{
+    display:block;
+    height: 50px;
+    background-color: var(--dark-blue);
+  }
+  .hamburger-menu{
+    padding:5px;
+    height: 100%;
+  }
+  .mobile-sidebar{
+    position: relative;
+    flex-direction: column;
+    gap:10px;
+    background-color: var(--dark-blue);
+    padding:10px;
+  }
+  .mobile-sidebar ul{
+    display:flex;
+    flex-direction: column;
+    gap:10px;
+  }
+  .mobile-sidebar li{
+    background-color: var(--light-grey);
+    padding:5px;
+    border-radius: 5px;;
+  }
+  .mobile-sidebar a{
+    text-decoration: none;
+    color:black;
+  }
+  .mobile-sidebar .logout-btn {
+    background-color: var(--light-red);
+  }
+  .mobile-sidebar .logout-btn a{
+    color:white;
+  }
+
+  .content{
+    width: 100%;
+    padding: 10px;
+  }
+
+  
 }
